--- a/week1/assignments/bankLetters.html
+++ b/week1/assignments/bankLetters.html
@@ -8,6 +8,7 @@
                 width: 400px;
                 border: black 1px solid;
                 padding: 10px;
+                margin-bottom: 10px;
             }
         </style>
     </head>
