--- a/week2/assignments/calendar/calendar.html
+++ b/week2/assignments/calendar/calendar.html
@@ -8,7 +8,27 @@
     </head>
     <body>
         <div class='calendarWrapper'>
-            <div class='calendarTitle'></div>
+            <div class='calendarTitle'>Calender</div>
+            <div id="select">
+                <select name="months" id="selectMonths" onchange="jump()">
+                    <option value="0">Months</option>
+                    <option value="1">January</option>
+                    <option value="2">February</option>
+                    <option value="3">March</option>
+                    <option value="4">April</option>
+                    <option value="5">May</option>
+                    <option value="6">June</option>
+                    <option value="7">July</option>
+                    <option value="8">August</option>
+                    <option value="9">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+
+                </select>
+                <input type="number" name="year" id="selectyear">
+                <input type="submit" value="go" onclick="gogo()">
+            </div>
             <div class='calendar' id='calendarDays'></div>
         </div>
     </body>
