--- a/week2/assignments/calendar/calendar.html
+++ b/week2/assignments/calendar/calendar.html
@@ -1,5 +1,3 @@
-<!-- Modify this page to use a select and an input to generate a calendar for any month and year -->
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -8,24 +6,12 @@
     </head>
     <body>
         <div class='calendarWrapper'>
-            <div class='calendarTitle'>Calender</div>
-            <div id="select">
-                <select name="months" id="selectMonths" onclick="printCalendar()">
-                    <option value="0">January</option>
-                    <option value="1">February</option>
-                    <option value="2">March</option>
-                    <option value="3">April</option>
-                    <option value="4">May</option>
-                    <option value="5">June</option>
-                    <option value="6">July</option>
-                    <option value="7">August</option>
-                    <option value="8">September</option>
-                    <option value="9">October</option>
-                    <option value="10">November</option>
-                    <option value="11">December</option>
-                </select>
-                <input type="number" name="year" id="selectyear">
-                <input type="submit" value="go" onclick="printCalendar()"></div>
+            <div class='calendarTitle'>Calendar</div>
+            <div class='calendarTitle'>
+                <select id="month"></select>
+                <input type="text" id="year" placeholder="yyyy" style="width: 50px;">
+                <button id= "printCalendar">Go</button>
+                </div>
             <div class='calendar' id='calendarDays'></div>
         </div>
     </body>
