--- a/week3/assignments/starwars/starwars.html
+++ b/week3/assignments/starwars/starwars.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>SWAPI</title>
         <link rel='stylesheet' href='starwars.css'>
     </head>
     <body>
